// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Link /> > passes class names down properly 1`] = `
<a
  class="exampleClassName _link_d78ce8 _link--emphasis-default_d78ce8"
  data-testid="example-class-name"
  href="/"
>
  Click
</a>
`;

exports[`<Link /> > passes test ids down properly 1`] = `
<a
  class="_link_d78ce8 _link--emphasis-default_d78ce8"
  data-testid="example-test-id"
  href="/"
>
  Click
</a>
`;
